chore(bower): add missing info

--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,8 @@
     "cache"
   ],
   "homepage": "http://aurelia.io",
+  "main": "dist/commonjs/aurelia-web-components.js",
+  "moduleType": "node",
   "license": "MIT",
   "authors": [
     "Rob Eisenberg <rob@bluespire.com> (http://robeisenberg.com/)"
