--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "babel-dts-generator": "^0.4.7",
     "babel-eslint": "^4.1.1",
     "babel-plugin-syntax-flow": "^6.5.0",
+    "babel-plugin-transform-builtin-classes": "^0.6.1",
+    "babel-plugin-transform-custom-element-classes": "^0.1.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.7.0",
@@ -74,7 +76,7 @@
     "karma-jasmine": "^0.3.5",
     "karma-jspm": "^2.0.1",
     "object.assign": "^1.0.3",
-    "require-dir": "^0.1.0",
+    "require-dir": "^1.0.0",
     "run-sequence": "^1.0.2",
     "through2": "^2.0.0",
     "vinyl": "^0.5.1",
