--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aurelia-web-components",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A plugin capable of transforming Aurelia components into standards-compliant Web Components.",
   "keywords": [
     "aurelia",
@@ -79,6 +79,7 @@
     "require-dir": "^1.0.0",
     "run-sequence": "^1.0.2",
     "through2": "^2.0.0",
+    "typedoc": "^0.11.1",
     "vinyl": "^0.5.1",
     "vinyl-paths": "^1.0.0",
     "yargs": "^2.1.1"
