--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "type": "git",
     "url": "http://github.com/aurelia/web-components"
   },
+  "scripts": {
+    "prebuild": "rimraf dist",
+    "build": "rollup -c"
+  },
   "jspm": {
     "registry": "npm",
     "jspmPackage": true,
@@ -28,65 +32,25 @@
     "peerDependencies": {
       "aurelia-dependency-injection": "^1.3.2",
       "aurelia-pal": "^1.7.0",
-      "aurelia-templating": "^1.7.0"
+      "aurelia-templating": "^1.10.1"
     },
     "dependencies": {
       "aurelia-dependency-injection": "^1.3.2",
       "aurelia-pal": "^1.7.0",
-      "aurelia-templating": "^1.7.0"
+      "aurelia-templating": "^1.10.1"
     },
     "devDependencies": {}
   },
   "dependencies": {
     "aurelia-dependency-injection": "^1.3.2",
+    "aurelia-metadata": "^1.0.5",
     "aurelia-pal": "^1.7.0",
-    "aurelia-templating": "^1.7.0"
+    "aurelia-templating": "^1.10.1"
   },
   "devDependencies": {
-    "aurelia-tools": "^0.1.12",
-    "babel-dts-generator": "^0.4.7",
-    "babel-eslint": "^4.1.1",
-    "babel-plugin-syntax-flow": "^6.5.0",
-    "babel-plugin-transform-builtin-classes": "^0.6.1",
-    "babel-plugin-transform-custom-element-classes": "^0.1.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.7.0",
-    "babel-plugin-transform-es2015-modules-systemjs": "^6.6.5",
-    "babel-plugin-transform-flow-strip-types": "^6.7.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-es2015-loose": "^7.0.0",
-    "babel-preset-stage-1": "^6.5.0",
-    "conventional-changelog": "0.0.11",
-    "del": "^1.1.0",
-    "gulp": "^3.8.10",
-    "gulp-babel": "^6.1.2",
-    "gulp-bump": "^0.3.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-eslint": "^1.0.0",
-    "gulp-insert": "^0.4.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-typedoc": "^1.2.1",
-    "gulp-typedoc-extractor": "^0.0.8",
-    "jasmine-core": "^2.1.3",
-    "karma": "^0.13.15",
-    "karma-babel-preprocessor": "^6.0.1",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-coverage": "^0.3.1",
-    "karma-jasmine": "^0.3.5",
-    "karma-jspm": "^2.0.1",
-    "object.assign": "^1.0.3",
-    "require-dir": "^1.0.0",
-    "run-sequence": "^1.0.2",
-    "through2": "^2.0.0",
-    "typedoc": "^0.11.1",
-    "vinyl": "^0.5.1",
-    "vinyl-paths": "^1.0.0",
-    "yargs": "^2.1.1"
-  },
-  "aurelia": {
-    "documentation": {
-      "articles": []
-    }
+    "rimraf": "^2.6.3",
+    "rollup": "^1.7.0",
+    "rollup-plugin-typescript2": "^0.20.1",
+    "typescript": "^3.3.3333"
   }
 }
