chore(all): clean up, add docs/ comments

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "cut-release": "npm run build"
   },
   "jspm": {
     "registry": "npm",
