chore(test): add test & update deps

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "license": "MIT",
   "author": "Rob Eisenberg <rob@bluespire.com> (http://robeisenberg.com/)",
-  "main": "dist/commonjs/aurelia-web-components.js",
+  "main": "dist/es2015/aurelia-web-components.js",
   "module": "dist/es2015/aurelia-web-component.js",
   "unpkg": "dist/umd-es2015/aurelia-web-component.js",
   "types": "dist/aurelia-web-components.d.ts",
@@ -21,6 +21,9 @@
     "url": "http://github.com/aurelia/web-components"
   },
   "scripts": {
+    "test": "karma start --single-run",
+    "test:watch": "karma start",
+    "test:debugger": "karma start --browsers ChromeDebugging",
     "prebuild": "rimraf dist",
     "build": "rollup -c",
     "postbuild": "npm run build:dts",
@@ -56,12 +59,38 @@
     "aurelia-templating": "^1.10.1"
   },
   "devDependencies": {
+    "@types/jasmine": "^3.3.12",
+    "aurelia-event-aggregator": "^1.0.3",
+    "aurelia-framework": "^1.3.1",
+    "aurelia-history": "^1.2.1",
+    "aurelia-history-browser": "^1.3.2",
+    "aurelia-loader": "^1.0.2",
+    "aurelia-loader-webpack": "^2.2.1",
+    "aurelia-logging-console": "^1.1.1",
+    "aurelia-pal-browser": "^1.8.1",
+    "aurelia-polyfills": "^1.3.4",
+    "aurelia-router": "^1.7.1",
+    "aurelia-templating-binding": "^1.5.3",
+    "aurelia-templating-resources": "^1.10.0",
+    "aurelia-templating-router": "^1.4.0",
+    "aurelia-webpack-plugin": "^4.0.0",
     "conventional-changelog": "^3.0.6",
     "dts-bundle-generator": "^2.1.0",
+    "html-loader": "^0.5.5",
+    "jasmine-core": "^3.4.0",
+    "karma": "^4.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^3.0.5",
     "rimraf": "^2.6.3",
-    "rollup": "^1.7.0",
-    "rollup-plugin-typescript2": "^0.20.1",
-    "tslint": "^5.14.0",
-    "typescript": "^3.3.3333"
+    "rollup": "^1.11.3",
+    "rollup-plugin-typescript2": "^0.21.0",
+    "ts-loader": "^6.0.0",
+    "tslint": "^5.16.0",
+    "typescript": "^3.3.3333",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2"
   }
 }
